crates/codex_cloud_agents/src/inbound/acp/prose/snapshots/codex_cloud_agents__inbound__acp__prose__test__provisional_tokens_are_replaced_by_completed_text_and_late_deltas_are_ignored.snap
---
source: crates/codex_cloud_agents/src/inbound/acp/prose/test.rs
expression: updates
---
[
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " is"
    },
    "_meta": {
      "macro.textReplace": {
        "id": "m"
      }
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " is**Codex**"
    },
    "_meta": {
      "macro.textReplace": {
        "id": "m"
      }
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "My name is **Codex**."
    },
    "_meta": {
      "macro.textReplace": {
        "id": "m"
      }
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "I'm **Codex**."
    },
    "_meta": {
      "macro.textReplace": {
        "id": "m"
      }
    }
  }
]
